# SPH_method

./: #Geometry.cpp#  .gitignore  3  CMakeLists.txt  Geometry.cpp  Interface.h  Kernel.cpp  Makefile  MemUsage.cpp  MeshGeometry.asv  MeshGeometry.m  Neighboor_performance.sh  Neighborhood.cpp  Neighborhood_performance.cpp  ParaView.cpp  Playground.cpp  Playground.hpp  Playground.kzr  Playground.txt  README.md  README.txt  SLURM.sh  SPH.cpp  SPH.h  SPH.hpp  basicBuildingBlock.avx  cmake_install.cmake  compilation.sh  neighbors  nic4Results  performance.m  scriptTest.sh  simpleCube.xml  soup.sh  sph  twoSimpleCubes.kzr  weak.m
CPP_Interface/: ParaView.cpp  Playground.cpp  inputReader.cpp  inputReader.h  mainTest.cpp  paraview.cpp  writeField.cpp
CPP_Main/: Neighborhood_performance.cpp  SPH.cpp
CPP_Physics/: Geometry.cpp  Init.cpp  Kernel.cpp  MPI.cpp  Neighborhood.cpp  TimeIntegration.cpp  navierStokes.cpp  updateMovingSpeed.cpp  viscosityComputation.cpp
CPP_Tools/: CleanUp.cpp  ConsistencyCheck.cpp  MemUsage.cpp  sizeField.cpp
Headers/: Interface.h  Main.h  Physics.h  Playground.h  Playground.hpp  SPH.hpp  Structures.h  Tools.h  paraview.h  swapbytes.h
MakeFile&Batch/: Makefile_FIRST
Matlab/: GUI.m  LouisGoffin.m  Playground.m  PoolAlpha0.5.fig  PoolB128.fig  TestCases.m  freefallingcube_0.01.fig  freefallingcube_0.05.fig  front.m  graph_front.m  performance.m  performance_nic4.m  scaling.m  scalingNew.m  timeMemScaling.m
Playgrounds/: BWGeom.kzr  BWPara.kzr  BathymetryGeom.kzr  BathymetryPara.kzr  Bathymetry_Geom.kzr  Bathymetry_Para.kzr  BeachReal_Geom.kzr  BeachReal_Para.kzr  Beach_Geom.kzr  Beach_Para.kzr  CrashCubeGoffin_Geom.kzr  CrashCubeGoffin_Para.kzr  CrashCubeMoving_Geom.kzr  CrashCubeMoving_Para.kzr  CrashCube_Geom.kzr  CrashCube_Para.kzr  CrespoWaveGeom.kzr  CrespoWaveParam.kzr  Dam.kzr  Dam2_Geom.kzr  Dam2_Para.kzr  Dam3_Geom.kzr  Dam3_Para.kzr  Dam4_Geom.kzr  Dam4_Para.kzr  DamWet2_Geom.kzr  DamWet3_Geom.kzr  DamWet4_Geom.kzr  DamWet5_Geom.kzr  DamWet7_Geom.kzr  DamWet9_Geom.kzr  DamWet_Geom.kzr  DamWet_Para.kzr  Dam_Geom.kzr  Dam_Para.kzr  FFC_Geom.kzr  FFC_Para.kzr  FluidExample.kzr  Fluid_Example.kzr  FreeFallingCube_Geom.kzr  (+63 more)
Playgrounds/PPMs/: MaunaLona.ppm  beachReal.ppm  beachRough.ppm  beachRough2.ppm  beachSmooth.ppm  beachWall.ppm  ppmToBath.cpp
Playgrounds/vortex/: vortex2_Geom.kzr  vortex_Para.kzr  vortexlarge_Geom.kzr  vortexlargesmall_Geom.kzr
Playgrounds/vortex_test/: vortex10_Para.kzr  vortex1_Geom.kzr  vortex1_Para.kzr  vortex2_Geom.kzr  vortex2_Para.kzr  vortex3_Para.kzr  vortex4_Para.kzr  vortex5_Para.kzr  vortex6_Para.kzr  vortex7_Para.kzr  vortex8_Para.kzr  vortex9_Para.kzr
Results/: README.doc
rboman/: .gitignore  CMakeLists.txt  README.md  cube.cpp  sph.cpp  sph.h
